--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ yew = "0.18.0"
 yew-router = "0.15.0"
 yew_styles = "0.11.0"
 yew-interop = {version = "0.3", features = ["script"]}
-
+serde = {version="1.0", features=["derive"]}
+anyhow = "1.0.32"
 
 [dependencies.web-sys]
 version = "0.3"
